change npm module name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "its.js",
+  "name": "si.js",
   "version": "1.0.0",
   "description": "Javascript Library to check objects type and do another things",
   "main": "its.js",
